--- a/Q-and-A/Base.lproj/Main.storyboard
+++ b/Q-and-A/Base.lproj/Main.storyboard
@@ -117,11 +117,8 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6s0-I8-XFl">
-                                <rect key="frame" x="0.0" y="170" width="375" height="375"/>
+                                <rect key="frame" x="0.0" y="170" width="375" height="222.5"/>
                                 <color key="backgroundColor" red="0.93489243686422008" green="1" blue="0.997922036765855" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="6s0-I8-XFl" secondAttribute="height" id="XOE-cC-pyU"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -129,6 +126,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6s0-I8-XFl" firstAttribute="leading" secondItem="Ipx-kY-U8S" secondAttribute="leading" id="3VD-rb-q3E"/>
+                            <constraint firstItem="6s0-I8-XFl" firstAttribute="height" secondItem="GOy-fi-ew4" secondAttribute="height" multiplier="1/3" id="8O6-qj-oUe"/>
                             <constraint firstItem="a6b-dO-AyQ" firstAttribute="top" secondItem="Ipx-kY-U8S" secondAttribute="top" constant="16" id="DIG-BD-Eze"/>
                             <constraint firstItem="Ipx-kY-U8S" firstAttribute="trailing" secondItem="6s0-I8-XFl" secondAttribute="trailing" id="fD7-Jq-plr"/>
                             <constraint firstItem="6s0-I8-XFl" firstAttribute="top" secondItem="a6b-dO-AyQ" secondAttribute="bottom" constant="8" id="rqu-8H-fNy"/>
@@ -161,49 +159,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nSt-zL-BdG">
-                                <rect key="frame" x="8" y="124" width="359" height="535"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="IOd-MI-U3D">
+                                <rect key="frame" x="16" y="132" width="343" height="222.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCd-Ka-VXS">
-                                        <rect key="frame" x="0.0" y="0.0" width="351" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAb-eK-bAa">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jj-Yp-Ch2">
-                                        <rect key="frame" x="0.0" y="28.5" width="351" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Elr-ZG-lbN">
+                                        <rect key="frame" x="0.0" y="37.5" width="343" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of Person Answering Q" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wcb-bW-Pc6">
-                                        <rect key="frame" x="0.0" y="57" width="351" height="194.5"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name of person answering question" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6rI-l2-iPA">
+                                        <rect key="frame" x="0.0" y="75" width="343" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zQQ-ck-n5c">
-                                        <rect key="frame" x="0.0" y="259.5" width="351" height="275.5"/>
-                                        <color key="backgroundColor" red="0.62477226969999999" green="0.29176627379999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="answer question here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xQa-Vl-exc">
+                                        <rect key="frame" x="0.0" y="122" width="343" height="100.5"/>
+                                        <color key="backgroundColor" red="0.93489243690000001" green="1" blue="0.99792203680000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="7jj-Yp-Ch2" secondAttribute="trailing" constant="8" id="5zA-KF-Lbs"/>
-                                    <constraint firstAttribute="trailing" secondItem="wcb-bW-Pc6" secondAttribute="trailing" constant="8" id="DKz-N3-EaA"/>
-                                    <constraint firstAttribute="trailing" secondItem="zQQ-ck-n5c" secondAttribute="trailing" constant="8" id="O9g-LZ-oqf"/>
-                                    <constraint firstAttribute="trailing" secondItem="pCd-Ka-VXS" secondAttribute="trailing" constant="8" id="WR1-Ag-b5w"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="zQQ-ck-n5c" firstAttribute="height" secondItem="6uP-TQ-NqG" secondAttribute="height" multiplier="0.5" id="5ry-Zk-Glz"/>
-                            <constraint firstItem="nSt-zL-BdG" firstAttribute="leading" secondItem="6uP-TQ-NqG" secondAttribute="leading" constant="8" id="8I5-AP-h14"/>
-                            <constraint firstItem="6uP-TQ-NqG" firstAttribute="bottom" secondItem="nSt-zL-BdG" secondAttribute="bottom" constant="8" id="GXn-ie-Vyt"/>
-                            <constraint firstItem="6uP-TQ-NqG" firstAttribute="trailing" secondItem="nSt-zL-BdG" secondAttribute="trailing" constant="8" id="SYl-Ft-43B"/>
-                            <constraint firstItem="nSt-zL-BdG" firstAttribute="top" secondItem="6uP-TQ-NqG" secondAttribute="top" constant="8" id="cUd-cT-sfX"/>
+                            <constraint firstItem="IOd-MI-U3D" firstAttribute="height" secondItem="1Ud-bK-JE8" secondAttribute="height" multiplier="1/3" id="4bK-i9-MuO"/>
+                            <constraint firstItem="6uP-TQ-NqG" firstAttribute="trailing" secondItem="IOd-MI-U3D" secondAttribute="trailing" constant="16" id="RIW-RA-xOK"/>
+                            <constraint firstItem="IOd-MI-U3D" firstAttribute="leading" secondItem="6uP-TQ-NqG" secondAttribute="leading" constant="16" id="XFO-pK-tLh"/>
+                            <constraint firstItem="IOd-MI-U3D" firstAttribute="top" secondItem="6uP-TQ-NqG" secondAttribute="top" constant="16" id="sig-ji-ar5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6uP-TQ-NqG"/>
                     </view>
@@ -215,15 +206,15 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="answerField" destination="zQQ-ck-n5c" id="t46-wr-Mh5"/>
-                        <outlet property="nameField" destination="wcb-bW-Pc6" id="wak-zX-qgO"/>
-                        <outlet property="nameLabel" destination="7jj-Yp-Ch2" id="D8v-dw-qgT"/>
-                        <outlet property="questionLabel" destination="pCd-Ka-VXS" id="FOa-Bg-VzO"/>
+                        <outlet property="answerField" destination="xQa-Vl-exc" id="ah2-gX-50v"/>
+                        <outlet property="nameField" destination="6rI-l2-iPA" id="OD2-Yv-788"/>
+                        <outlet property="nameLabel" destination="Elr-ZG-lbN" id="mr8-Kb-Byq"/>
+                        <outlet property="questionLabel" destination="MAb-eK-bAa" id="DK0-uM-4Wh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3EA-C9-fPu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2271" y="908"/>
+            <point key="canvasLocation" x="2269.5999999999999" y="907.1964017991005"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KeI-Fx-S0C">
